<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/category"
        android:title="@string/nav_category"
        app:cnb_iconColor="@color/_colorTrasBlue"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/nav_search"
        app:cnb_iconColor="@color/_colorTrasBlue"/>
    <item
        android:id="@+id/nav_inbox"
        android:icon="@drawable/message"
        android:title="@string/nav_inbox"
        app:cnb_iconColor="@color/_colorTrasBlue"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile"
        app:cnb_iconColor="@color/_colorTrasBlue"/>

</menu>