<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_above="@id/txtSignUp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/sign_n"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtSignUp2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/signup_text_1"
        android:textColor="#111318"
        android:textSize="22sp"
        app:fontFamily="@font/gilroy_medium"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="282dp" />

    <TextView
        android:id="@+id/txtSignUp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtSingUp3"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_text_2"
        android:textColor="#111318"
        android:textSize="22sp"
        app:fontFamily="@font/gilroy_medium" />

    <TextView
        android:id="@+id/txtSingUp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_text_3"
        android:textColor="#3485E8"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/gilroy_bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtOr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_signup_bg"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/signup_button_text"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_sign_google"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_text_4"
        android:textColor="#111318"
        android:textSize="14sp"
        app:fontFamily="@font/gilroy_bold" />

    <LinearLayout
        android:id="@+id/ll_sign_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_sign_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_signup_with_other"
        android:gravity="center"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_google" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:fontFamily="@font/gilroy_bold"
            android:freezesText="false"
            android:gravity="left|center_vertical"
            android:hint="@string/continue_with_face"
            android:paddingLeft="10dp"
            android:stateListAnimator="@null"
            android:text="@string/continue_with_google"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_signup_with_other"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFace"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_facebook" />

        <Button
            android:id="@+id/btnFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:fontFamily="@font/gilroy_bold"
            android:paddingLeft="10dp"
            android:stateListAnimator="@null"
            android:text="@string/continue_with_face"
            android:textAllCaps="false" />
    </LinearLayout>


</RelativeLayout>