<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nscoll_view_fragment_profile_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rr_profile"
                android:layout_marginTop="-30dp"
                android:background="@drawable/profile_ll_bg" />




            <com.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/rr_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="4dp"
                app:shape_roundRect_bottomLeftRadius="24dp"
                app:shape_roundRect_bottomRightRadius="24dp"
                app:shape_roundRect_topLeftRadius="60dp"
                app:shape_roundRect_topRightRadius="60dp"

                android:layout_centerHorizontal="true"

                app:shape_roundRect_borderColor="@color/_colorTrasBlue2"
                app:shape_roundRect_borderWidth="3dp"
                >


                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/profile_pic"/>

            </com.github.florent37.shapeofview.shapes.RoundRectView>


            <LinearLayout
                android:id="@+id/ll_pp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rr_profile"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:weightSum="3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name_text"
                        android:textColor="@color/_colorTextBlack"
                        android:textSize="18sp"
                        app:fontFamily="@font/gilroy_bold" />

                    <TextView
                        android:id="@+id/tvUserMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/user_mail"
                        android:textColor="@color/_colorTextBlack"
                        android:textSize="14sp"
                        app:fontFamily="@font/gilroy_regular" />

                    <TextView
                        android:id="@+id/tvEnjoyDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/user_join_date"
                        android:textColor="@color/_colorTextGrey"
                        android:textSize="10sp"
                        app:fontFamily="@font/gilroy_medium" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/profile_circle" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/user_profile_courses_text"
                        android:textSize="10sp"
                        android:textColor="@color/_colorTextBlack"
                        app:fontFamily="@font/gilroy_black" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">



                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <View
                            android:id="@+id/v_complete_dot_blue"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:layout_above="@id/tv_complete_text"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/profile_dot_blue" />

                        <TextView
                            android:id="@+id/tv_complete_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/tv_complete_text"
                            android:layout_toEndOf="@id/v_complete_dot_blue"
                            android:text="@string/course_complete_count"
                            android:layout_marginBottom="-8dp"
                            android:textColor="@color/_colorTextBlack"
                            android:textSize="20sp"
                            app:fontFamily="@font/helvetica" />

                        <TextView
                            android:id="@+id/tv_complete_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="7dp"

                            android:text="@string/process_text_completed"
                            android:textColor="@color/_colorTextGrey"
                            android:textSize="9sp"
                            app:fontFamily="@font/gilroy_medium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <View
                            android:id="@+id/v_complete_dot_green"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:layout_above="@id/tv_in_proses_text"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/profile_dot_green" />

                        <TextView
                            android:id="@+id/tv_in_proses_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/tv_in_proses_text"
                            android:layout_toEndOf="@id/v_complete_dot_green"
                            android:text="@string/course_in_process_count"
                            android:layout_marginBottom="-8dp"
                            android:textColor="@color/_colorTextBlack"
                            android:textSize="20sp"
                            app:fontFamily="@font/helvetica" />

                        <TextView
                            android:id="@+id/tv_in_proses_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="7dp"
                            android:text="@string/process_text_in_process"
                            android:textColor="@color/_colorTextGrey"
                            android:textSize="9sp"
                            app:fontFamily="@font/gilroy_medium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <View
                            android:id="@+id/v_complete_dot_yellow"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:layout_above="@id/tv_not_started_text"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/profile_dot_yellow" />

                        <TextView
                            android:id="@+id/tv_not_started_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/tv_not_started_text"
                            android:layout_toEndOf="@id/v_complete_dot_yellow"
                            android:text="@string/course_not_started_count"
                            android:layout_marginBottom="-8dp"
                            android:textColor="@color/_colorTextBlack"
                            android:textSize="20sp"
                            app:fontFamily="@font/helvetica" />

                        <TextView
                            android:id="@+id/tv_not_started_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="7dp"
                            android:text="@string/process_text_not_started"
                            android:textColor="@color/_colorTextGrey"
                            android:textSize="9sp"
                            app:fontFamily="@font/gilroy_medium" />
                    </RelativeLayout>



                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/course_recent_text"
                android:textColor="@color/_colorTextBlack"
                android:textSize="16sp"
                app:fontFamily="@font/gilroy_bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_view_all_text"
                android:textColor="@color/_colorTextGrey2"
                app:fontFamily="@font/gilroy_bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fragment_profile_recent_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="10dp"
            tools:listitem="@layout/list_item_course"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>