<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="3">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_inbox_list_item_icon"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginRight="15dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/feather_bell" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_inbox_list_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_message_title"
                    android:textColor="@color/_colorTextBlack"
                    android:textSize="18sp"
                    app:fontFamily="@font/gilroy_medium" />

                <TextView
                    android:id="@+id/tv_inbox_list_item_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:text="@string/list_item_message_content"
                    android:textColor="@color/_colorTextGrey3"
                    app:fontFamily="@font/gilroy_medium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_inbox_list_item_counter"
                android:layout_width="20dp"
                android:layout_height="20dp">

                <View
                    android:id="@+id/view3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/num_count_bg" />

                <TextView
                    android:id="@+id/tv_inbox_list_item_unread_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="1"
                    android:textColor="@color/_colorWhite"
                    android:textSize="14sp"
                    app:fontFamily="@font/gilroy_bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_inbox_list_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/list_item_message_date"
                android:textColor="@color/_colorTextGrey3"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_colorWhite" />

</LinearLayout>